--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <img class="p-absolute topBubble" src="images\bg-pattern-top.svg" alt="">
-  <img class="p-absolute botBubble" src="images\bg-pattern-bottom.svg" alt="">
+  <img class="p-absolute topBubble" src="images/bg-pattern-top.svg" alt="">
+  <img class="p-absolute botBubble" src="images/bg-pattern-bottom.svg" alt="">
     <div class="wrapper">
       <div class="bWhite bordTop mTop">
-        <img class="bordTop" src="images\bg-pattern-card.svg" alt="">
+        <img class="bordTop" src="images/bg-pattern-card.svg" alt="">
       </div>
       <div class="bWhite p-relative">
-        <img class="p-absolute pImg" src="images\image-victor.jpg" alt="">
+        <img class="p-absolute pImg" src="images/image-victor.jpg" alt="">
         <h5 class="name">Victor Crest <span>26</span></h5>
         <p>London</p>
       </div>
